# CR_CODE

./: .gitignore  AOI_CR.vcxproj  AOI_CR.vcxproj.bak  AOI_CR.vcxproj.filters  AOIcr.sln  ClassfyWord.cpp  DllExtern2.cpp  OpenCV_4.10.0_debug.props  OpenCV_4.10.0_release.props  OptimizationPlan.md  README.md  main.cpp
ALGO/: AnalyseMat.cpp  AnalyseMat.h  BarAndQR.cpp  BarAndQR.h  CalcFun.cpp  CalcFun.h  InferenceManager.h  InferenceWorker.cpp  InferenceWorker.h  LocationAndRecognition.cpp  LocationAndRecognition.h  MatchFun.cpp  MatchFun.h  ModelManager.cpp  ModelManager.h  ThreadSafeCameraData.h
AUTO_PARTS/: InspMolding.cpp  InspMolding.h  InspMoldingStruct.h
BAG/: InspHeatSeal.cpp  InspHeatSeal.h  InspHeatSealStruct.h  InspSew.cpp  InspSew.h  InspSewStruct.h
CLASSIFY/: classfy_vino.h
CODE_READER/: HalconBarcodeDetector.cpp
COMMON/: AsyncLogge.h  AsyncLogger.cpp  Common.cpp  Common.h  DllExtern.cpp  DllExtern.h  DllExternCR.h  DrawAndShowImg.cpp  DrawAndShowImg.h  HalconFun.cpp  HalconFun.h  HeaderDefine.cpp  HeaderDefine.h  HeaderDefine.h.bak  Log.cpp  Log.h  PutTextZH.cpp  PutTextZH.h  TxtOperater.cpp  TxtOperater.h
DETECT/: detection.h  yolo26_detector.cpp  yolo26_detector.h
OIL/: HalconCircle.cpp  InspBottleNeck.cpp  InspBottleNeck.h  InspBottleNeckStruct.h  InspBottleNum.cpp  InspBottleNum.h  InspBottleNumConfigParser.cpp  InspBottleNumConfigParser.h  InspBottleNumResultProcessor.h  InspBottleNumStruct.h  InspBoxBag.cpp  InspBoxBag.h  InspBoxBagStruct.h  InspCode.cpp  InspCode.h  InspCodeStruct.h  InspHandle.cpp  InspHandle.h  InspHandleStruct.h  InspLabelAll.cpp  InspLabelAll.h  InspLabelAllStruct.h  InspLevel.cpp  InspLevel.h  InspLevelStruct.h  InspOcr.cpp  InspOcr.h  InspOcrStruct.h  InspPressCap.cpp  InspPressCap.h  InspPressCapStruct.h
POSE/: yolov8_pose.cpp  yolov8_pose.h  yolov8_pose_openvino.cpp  yolov8_pose_openvino.h  yolov8_pose_trt.cpp  yolov8_pose_trt.h
PaddleOCR/: ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
QT_DEMO/: CMakeLists.txt  QT_DEMO.vcxproj  README.md
QT_DEMO/src/: DllInvoker.cpp  DllInvoker.h  HikCamera.cpp  HikCamera.h  MainWindow.cpp  MainWindow.h  main.cpp
SEGMENT/: deeplabv3_trt.cpp  deeplabv3_trt.h  unet_trt.cpp  unet_trt.h  yolov8_seg_trt.cpp  yolov8_seg_trt.h
TEST/: AES.cpp  ClassfyWord-1.cpp  FileSplitter.cpp  FileSplitterTime.cpp  Kmeans.cpp  LoadJsonAndCrop.cpp  LocateAndClassfy.cpp  TrainTestBox.cpp  TrainTestCode.cpp  bar.cpp  box_xml.cpp  cropImg.cpp  cropImgObb.cpp  dll_test.cpp  match.cpp  (+10 more)
(+18 files in other folders)
